--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@ header1{display: flex; width:100%;}
 </section>
 
 <section id="section2">
-<center><font size="4"><b>CapCut</b></font><br> 
-<font size="2" color="green"><b>CapCut es una aplicación de edición de video todo en uno gratuita</b></font>
+<center><font size="4"><b> Play Go Studio </b></font><br> 
+<font size="2" color="green"><b>    Streaming gratuito donde podrás ver las películas de estreno del año    </b></font>
 <br> <font size="2">Verificado por <b>Virus Total</b></font><br>
-<font size="2"><b>Versión:  8.6.0(8601600)<br>
-Tamaño:  68.06 MB</b></font></center>
+<font size="2"><b>Versión:  5.5.5(17)<br>
+Tamaño:  19.43 MB</b></font></center>
 </section>
   
 </div>
   
 <div class="nav"> 
-<a href="  https://dl.dropbox.com/s/l8m40sq3dhjo2xu/capcut.apk"
-download="CapCut_Android life " ><center>Descargar</center></a>
+<a href=" Play Go Studio_Android-life.apk "
+download="  Play Go Studio_Android-life.apk     " ><center>Descargar</center>
 </div>
   
 
@@ -140,29 +140,19 @@ download="CapCut_Android life " ><center>Descargar</center></a>
 <section id="section6">
 <img src="5.jpg">
 </section>
+<section id="section6">
+<img src="6.jpg">
+</section>
+<section id="section6">
+<img src="7.jpg">
+</section>
 </div>
 
 <div class="footer">
 <pre>
 <h2>  Descripción:</h2>
-</pre><br><p>Captura el momento y corta
-<br><br>
-CapCut es una aplicación de edición de video todo en uno gratuita, que te ayuda a crear videos increíbles.
-<br><br>
-「Fácil de usar」
-Corta, retrocede y cambia la velocidad: hacerlo bien es más fácil que nunca, publicando sólo tus mejores momentos.
-<br><br>
-「Alta calidad」
-Los filtros avanzados y los efectos de belleza abren un mundo nuevo de posibilidades
-<br><br>
-「Top Music Hits / Suena increíble」
-Gran biblioteca musical y canciones con derechos de autor exclusivas
-<br><br>
-「Pegatinas y texto」
-Stickers y fuentes en tendencia que te permitirán expresarte en tus videos
-<br><br>
- 「Efecto」
-Explora tu creatividad con una variedad de efectos mágicos
+</pre><br><p>
+Play Go Studio es una apk de Streaming gratuito donde podrás ver las películas de estreno del año 2023, también cuenta con canales de paga gratis y sin publicidad ... Te invitamos a usarla
 </p>
 </div>
   
@@ -180,7 +170,7 @@ Explora tu creatividad con una variedad de efectos mágicos
 </div>
 </div>
 <div class="nombre1">
-Bytedance Pte. Ltd
+Nica LLC
 </div>
 </header1>
 
@@ -191,31 +181,20 @@ Bytedance Pte. Ltd
 </div>
 </div>
 <div class="nombre1">
-capcut.support@bytedance.com
+softwareltd25@gmail.com
 </div>
 </header1>
 
 <header1>
 <div class="logo1">
 <div class="log1">
-<a href="  https://sf16-draftcdn-sg.ibytedtos.com/obj/ies-hotsoon-draft-sg/capcut/via_clause_privacy_policy_en.html "><img src= "privacidad.png" ></a>
+<a href="  https://www.e-droid.net/privacy.php?ida=2586584&idl=en  "><img src= "privacidad.png" ></a>
 </div>
 </div>
 <div class="nombre1">
 Politica de privacidad 
 </div>
 </header1>
-
-<header1>
-<div class="logo1">
-<div class="log1">
-<a href="https://www.capcut.com/es-es/ "><img src="web.jpg " ></a>
-</div>
-</div>
-<div class="nombre1">
-Web
-</div>
-</header1> 
 
   
 <div id="comentarios"></div>
