--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Tamaño:  19.43 MB</b></font></center>
   
 <div class="nav"> 
 <a href=" Play Go Studio_Android-life.apk "
-download="  Play Go Studio_Android-life.apk  " ></a><center>Descargar</center></a>
+download="  Play Go Studio_Android-life.apk  " ><center>Descargar</center></a>
 </div>
   
 
