--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@ Tamaño:  19.43 MB</b></font></center>
 <a href=" Play Go Studio_Android-life.apk "
 download="  Play Go Studio_Android-life.apk  " ><center>Descargar</center></a>
 </div>
-  
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="Jevgw7OD"></script>
 
   
 <section id="section03">
@@ -198,7 +200,7 @@ Politica de privacidad
 
   
 <div id="comentarios"></div>
-
+<div class="fb-comments" data-href="https://developer-shop.github.io/Play-Go-Studio/" data-width="100" data-numposts="5"></div>
   
  <script type="text/javascript">(function(d, t, e, m){
     
